--- a/Assignment4/src/main/resources/templates/index.html
+++ b/Assignment4/src/main/resources/templates/index.html
@@ -1,8 +1,94 @@
-<html>
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org" 
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
+      <sec:authorize access="hasAnyRole('ROLE_ADMIN')" var="isAdmiin"></sec:authorize>
 <head>
-<title>Spring Boot</title>
+<meta charset="UTF-8" />
+<title>Home</title>
+      <meta charset="utf-8" />
+      <meta name="viewport" content="width=device-width, initial-scale=1" />
+      <script src="/js/jquery.js"></script>
+	  <script src="/js/templateBook.js"></script>
+      <script src="/js/bootstrap.min.js"></script>
+      <link rel="stylesheet" href="/css/bootstrap.min.css"/>
+      <link rel="stylesheet" href="/css/formStyle.css"/>
+      <link rel="stylesheet" href="/css/myStyle.css"/>
+<script>
+$(document).ready(function() {
+	var url = window.location.href;
+	var rootUrl = window.location.origin;
+	var home = window.location.origin+"/";
+	var booksList = window.location.origin+"/booksList";
+	var bookDetail = "";
+	var check = url.search("bookDetail");
+	if(check != -1){
+		bookDetail = url;
+	}
+	switch(url) {
+	    case home:
+	        getBooksList();
+	        break;
+	    case booksList:
+	    	getBooksList();
+	        break;
+	    case bookDetail:
+	        var bookId = bookDetail.substring(url.lastIndexOf('/') + 1);
+	    	getBookDetail(bookId);
+	        break;
+	    default:
+	    	alert("error");
+	        break;
+	} 
+})
+</script>
 </head>
 <body>
-	<h1>Hello Spring Boot</h1>
+    <div class="navbar navbar-static-top">
+		<div class="container-fluid">
+			<div class="navbar-header">
+				<a class="navbar-brand" href="">THƯ VIỆN SÁCH</a>
+			</div>
+				
+			<form class="navbar-form navbar-left" action=""  method="POST" >
+				<div class="form-group">
+					<input type="text" name="keyword" class="form-control" >
+				</div>
+				<button type="submit" class="btn btn-default"><i class="glyphicon glyphicon-search"></i></button>
+				Tìm kiếm theo : 
+					<select name="searchBy" style="color:black">
+						<option value="all_field">Tất cả</option>
+						<option value="title">Tiêu đề</option>
+						<option value="author">Tác giả</option>
+					</select>
+			</form>
+     		<ul class="nav navbar-nav navbar-right">
+		      <li><label>Hi! <span sec:authentication="name"></span> </label></li>
+		      <li><a href="#"><span class="glyphicon glyphicon-log-in"></span>Đăng kí</a></li>
+		      <li><a href="/login"><span class="glyphicon glyphicon-log-in"></span>Đăng nhập</a></li>
+		      <li><a href="#" th:href="@{/book/new}" sec:authorize="hasAnyRole('USER','ADMIN')">Đổi mật khẩu</a></li>
+		      <li><a href="#" th:href="@{/logout}" sec:authorize="hasAnyRole('USER','ADMIN')">Đăng xuất</a></li>
+		    </ul>
+		</div>
+	</div>
+	<div class="container main-container" id="menubar">
+		<a class="btn btn-md btn-default" href="javascript:void(0)" onclick="getBooksList()">
+ 		 			<span>Toàn bộ sách</span>
+        </a> 
+      	<a class="btn btn-md btn-primary" href="javascript:void(0)" onclick="addBookPage()" sec:authorize="hasAnyRole('USER','ADMIN')">
+ 		 			<span>Thêm sách</span>
+         </a>
+         <a class="btn btn-md btn-primary" href="javascript:void(0)" onclick="censorshipBook()" sec:authorize="hasRole('ADMIN')">
+ 		 			<span>Duyệt sách</span>
+         </a>
+         <p class="notiMsg error"></p>
+	</div>
+	<div class="container main-container">
+		<div class="panel panel-default">
+	 		<div class="panel-body">
+	 			 <div id="Content" ></div>
+ 			</div>
+	 		</div>
+ 	</div>
+	
 </body>
 </html>
