--- a/Assignment4/src/main/resources/static/css/formStyle.css
+++ b/Assignment4/src/main/resources/static/css/formStyle.css
@@ -1,22 +1,12 @@
 @charset "utf-8";
 
 /* ------------------- */
-
-.modal{
- 	display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    left: 0;
-    top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-    padding-top: 60px;
- }
- .modal-content {
-    background-color: #fefefe;
-    margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
-    width: 40%; /* Could be more or less, depending on screen size */
+.modal-header, h4, .close {
+      background-color: #4266ce;
+      color:white !important;
+      text-align: center;
+      font-size: 30px;
+  }
+.modal-footer {
+      background-color: #f9f9f9;
 }
