--- a/Assignment4/src/main/resources/templates/bookDetailPage.html
+++ b/Assignment4/src/main/resources/templates/bookDetailPage.html
@@ -127,9 +127,12 @@ function addComment(){
 <div class="col-md-5" id=bookImageDiv>
 	<img class = "bookImage" width=280px >
 </div>
-	
+<div class="col-md-10" style="margin-top:20px">
+	<input type="button" id="buttonEditBook" value="Chỉnh sửa"  sec:authorize="hasAnyRole('USER','ADMIN')" 
+					data-toggle="modal" data-target="#editBookFormDiv" style="display:none"/>
+</div>		
 <div class="col-md-10" id="commentDiv" style="margin-top:20px"></div>	
-<div class="col-md-10 form-group" id="">
+<div class="col-md-10 form-group" id="" sec:authorize="hasAnyRole('USER','ADMIN')">
 	<form role="form" name="commentForm" id="commentForm">
 		<div class="form-group">
 			<label> Bình luận </label>
@@ -138,9 +141,8 @@ function addComment(){
 		<button type="submit" class="btn btn-primary ">Đăng</button>
 	</form>
 </div>
-	
-<input type="button" id="buttonEditBook" value="Chỉnh sửa"  sec:authorize="hasAnyRole('USER','ADMIN')" 
-					data-toggle="modal" data-target="#editBookFormDiv" style="display:none"/>
+
+
 <!-- edit book form -->
 <div id="editBookFormDiv" class="modal fade" role="dialog" sec:authorize="hasAnyRole('USER','ADMIN')">
 	<div class="modal-dialog">
