--- a/Assignment4/src/main/resources/templates/booksListPage.html
+++ b/Assignment4/src/main/resources/templates/booksListPage.html
@@ -1,57 +1,135 @@
+
+<div>
+	Sắp xếp theo : 
+	<select id="sortBy">
+		<option value="id">Mã sách</option>
+		<option value="title">Tiêu đề</option>
+		<option value="author">Tác giả</option>
+	</select>
+</div>
 <table id="tableList" class="display">
-					       <thead>
-					            <tr>
-					                <th>Mã</th>
-									<th>Tiêu đề</th>
-					                <th>Tác giả</th>
-					                <th>Thời gian tạo</th>
-					                <th>Thời gian cập nhật</th>
-					                <th>Chi tiết</th>
-					                <th>Duyệt</th>
-					                <th>Xóa</th>
-					            </tr>
-					        </thead>
-					    </table>
+       <thead>
+            <tr>
+                <th>Mã</th>
+				<th>Tiêu đề</th>
+                <th>Tác giả</th>
+                <th>Thời gian tạo</th>
+                <th>Thời gian cập nhật</th>
+                <th>Chi tiết</th>
+                <th>Tình trạng</th>
+                <th>Xóa</th>
+            </tr>
+        </thead>
+        <tbody>
+        	
+        </tbody>
+    </table>
+<div id="Pagination" class="pagination">
+	<table id="">
+	    <tr>
+	        <td ><a href="javascript:void(0);" onclick="moveFirstPage()" id="firstPage">Trang đầu</a></td>
+	        <td ><a href="javascript:void(0);" onclick="movePreviousPage()" id="previousPage">Trang trước</a></td>        
+	        <td id="pageTitle"></td>        
+	        <td><a href="javascript:void(0);" onclick="moveNextPage()" id="nextPage">Trang sau</a></td>        
+	        <td ><a href="javascript:void(0);" onclick="moveLastPage()" id="lastPage">Trang cuối</a></td>
+	    </tr>
+	</table>
+</div>
 <script>
-$(document).ready( function () {
-	var table = $('#tableList').DataTable({
-		"sAjaxSource": window.location.origin+"/api/book/all/enabled",
-		"sAjaxDataProp": "",
-		"aoColumns": [
-			{ "mData": "id"},
-			{ "mData": "title" },
-			{ "mData": "author" },
-			{ "mData": "createdAt"},
-			{ "mData": "updatedAt" },
-			{ "mData": "id", 
-				render: function (dataType) { 
-					return '<a href="javascript:void(0)" onclick="getBookDetail('+dataType+')"> Xem</a>'; } 
-			},
-			{ "mData": "", 
-				render: function (data, type, row) {
-					if(row.enabled == 1){
-						return '<input type="checkbox" value="'+ row.enabled +'" checked onclick="enabled('+row.enabled+','+row.id+')">';
-					}else{
-						return '<input type="checkbox" value="'+ row.enabled +'" onclick="enabled('+row.enabled+','+row.id+')">';
-					}
-				},
-			 visible:false
-			},
-			{ "mData": "id", 
-			  render: function (dataType) {
-						return '<a title="Xóa" onclick="deleteBook('+dataType+')">Xóa</a>';
-			  },
-			  visible:false
-			}
-		]
-	 });
-	 if (($('#checkRoleUser').val() =="isAdmin")){
-	        var column = table.column(6);
-	        column.visible(true);
-	 }
-	 if (($('#checkRoleUser').val() =="isAdmin") || ($('#checkRoleUser').val() =="isUser")){
-	        var column = table.column(7);
-	        column.visible(true);
-	 }
+var pageSize = 5;
+var currentPageIndex = 0;
+var pageCount = 0;
+var sortBy = 'id';
+var startItemIndex = 0;
+var itemsToDisplay = 0;
+function PaginateSetPageObjects() {
+	$('#pageTitle').text('Page ' + (currentPageIndex + 1) + ' of ' + pageCount);
+	if (pageCount <= 1) {
+		$('#nextPage').hide();
+		$('#previousPage').hide();
+		$('#lastPage').hide();
+		$('#firstPage').hide();
+	} else {
+		$('#nextPage').show();
+		$('#previousPage').show();
+		$('#lastPage').show();
+		$('#firstPage').show();
+		if (currentPageIndex == 0) {
+			$('#previousPage').hide();
+			$('#firstPage').hide();
+		} else if (currentPageIndex == (pageCount - 1)) {
+			$('#nextPage').hide();
+			$('#lastPage').hide();
+		}
+	}
+}
+
+function displayBooks(){
+	
+	$.ajax({
+		type : "GET",
+		url : window.location.origin+"/api/book/all?page="+currentPageIndex+"&size="+pageSize+"&sort="+sortBy,
+		success: function(result){
+				$('#tableList tbody').html("");
+				$.each(result.content, function(i, book){
+					var bookRow = '<tr>' +
+					'<td>' + book.id + '</td>' +
+					'<td>' + book.title + '</td>' +
+					'<td>' + book.author + '</td>' +
+					'<td>' + book.createdAt + '</td>' +
+					'<td>' + book.updatedAt + '</td>' +
+					'<td><a title="Chi tiết" href="javascript:void(0)" '+
+						'onclick="getBookDetail('+book.id+')"> Xem</a></td>' +
+					'<td>'+ doCheck(book.enabled,book.id) +'</td>' + 
+					'<td><a title="Xóa" onclick="deleteBook('+ book.id+')">Xóa</a></td></tr>';
+					$('#tableList tbody').append(bookRow);
+		        });
+				currentPageIndex = result.pageable.pageNumber;
+				pageCount = result.totalPages;
+				PaginateSetPageObjects();
+		},
+		error : function(e) {
+			alert("ERROR: ", e);
+			console.log("ERROR: ", e);
+		}
+	});
+}
+	
+function moveFirstPage() { currentPageIndex = 0; displayBooks(); }
+function moveLastPage() { currentPageIndex = pageCount - 1; displayBooks(); }
+function movePreviousPage() { currentPageIndex--; displayBooks(); }
+function moveNextPage() { currentPageIndex++; displayBooks(); }
+
+displayBooks();
+
+function doCheck(status,bookId){
+	var select = '<select id="statusBook" onchange="changeStatusBook(this.value,'+bookId+')">';
+    if(status){
+    	 select += '<option value="1" selected="selected" style="color:red">Hiện</option>'+
+			'<option value="0" class="choose2">Ẩn</option>';
+    }else{
+    	select += '<option value="1" class="choose1">Hiện</option>'+
+		'<option value="0" selected="selected" class="choose2">Ẩn</option>';
+    }
+    select += '</select>';
+    return select;
+}
+
+
+
+$('#sortBy').on('change', function() {
+	sortBy = this.value;
+	displayBooks();
 });
+
+function changeStatusBook(st, id){
+	$.ajax({
+	  url: window.location.origin+"/api/book/enabled/"+id,
+      type: 'POST',
+      cache: false,
+      data: {
+        status : st
+      },
+	});	
+}
 </script>
