--- a/Assignment4/src/main/resources/templates/home.html
+++ b/Assignment4/src/main/resources/templates/home.html
@@ -11,6 +11,8 @@
 	<link rel="stylesheet" href="https://cdn.datatables.net/1.10.12/css/jquery.dataTables.min.css">
 	<script src="https://cdn.datatables.net/1.10.12/js/jquery.dataTables.min.js"></script>
 	<script src="/js/myJavascript.js"></script> 
+	<script src="/js/pagination.min.js"></script> 
+	<script src="/js/pagination.js"></script> 
 	<link rel="stylesheet" href="/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="/css/formStyle.css"/>
     <link rel="stylesheet" href="/css/myStyle.css"/>
